# Draven

./: CMakeLists.txt  README.md
models/: trained_on_chr18_ont.hpp  trained_on_chr18_seqreq.hpp  trained_on_chr19_hifi.hpp  trained_on_chr19_ont.hpp  trained_on_chr19_seqreq.hpp
src/: graph.cpp  graph.hpp  kmc_wrapper.hpp  main.cpp  option_manager.cpp  option_manager.h  pile.cpp  pile.hpp
src/graph_assembler/: graph_assembler.cpp
src/graph_constructor/: annotation_helpers.h  extended_overlap.cpp  extended_overlap.h  graph_constructor.cpp  graph_constructor.h  overlap_helpers.h  ram_overlap.cpp  ram_overlap.h
